* Adjusted Water Quality Portal (WPQ) URLs to follow new structure
* Fixed bug where some WQP results were being duplicated
* Added an argument to readWQPdata to ignore fetching site and parameter attributes.
* Fixed timezone bug in RDB requests that had mixed timezones.
* Updated internal data for parameter codes
* Added parameterCd argument to readNWISgwl as the services had changed

dataRetrieval 2.7.5
==========
* Fixed some time zone joining bugs that were happening if the timezone column had no information in the first ~100 returned rows.
* Changed WQP default behavior to a zip return
* Remove reshape2 and dplyr dependencies
* Added ability to customize user agent using options UA.dataRetrieval

dataRetrieval 2.7.3
==========
* Reworked whatNWISdata to allow the full flexibility of `...`
* Check for dates in instantaneous data, allowing requests for recent data to be routed directly to waterservices.gov.

dataRetrieval 2.7.1
==========
* Converted vignette to html

dataRetrieval 2.7.0
==========
* Added National Groundwater Monitoring Network services
* Converted WaterML2 code from XML to XML2 dependency. NOTE: The output of this the parseWaterML2 function has changed. This is a first step to a more robust WaterML2 parser
* Added new Water Quality Portal features: whatWQPmetrics, whatWQPdata, whatWQPsamples
* Bug fix on converting GET -> POST
* Bug fix on state abbrieviations
* Minor updates to internal code to improve efficiencies.

dataRetrieval 2.6.3
==========
* All USGS web services are being flipped from http to https. This version of dataRetrieval will attempt to access https, if that fails, will attempt http.

dataRetrieval 2.5.12
==========
* Response to readr 1.0.0 updates
* Added NWIS Water Use data
* Added NWIS Statistical Service data
* Added message on updates to NWIS data on startup message
* Automatically retries web service calls when status code is greater than 400
* More integrated use of pkg.env to set base URLs

dataRetrieval 2.5.7