@@ -282,14 +282,14 @@ test_that("readWQPdots working", {
   # NWIS names (siteNumber) converted to WQP expected names (siteid)
   formArgs_site <- dataRetrieval:::readWQPdots(siteNumber="04010301")
   expect_true(length(formArgs_site) == 2)
-  expect_true("siteid" %in% names(formArgs_site))
-  expect_false("siteNumber" %in% names(formArgs_site))
+  expect_true("siteid" %in% names(formArgs_site$values))
+  expect_false("siteNumber" %in% names(formArgs_site$values))
   
   # NWIS names (stateCd) converted to WQP expected names (statecode)
   formArgs <- dataRetrieval:::readWQPdots(stateCd="OH",parameterCd="00665")
-  expect_true(length(formArgs) == 3)
-  expect_true("statecode" %in% names(formArgs))
-  expect_false("stateCd" %in% names(formArgs))
+  expect_true(length(formArgs$values) == 3)
+  expect_true("statecode" %in% names(formArgs$values))
+  expect_false("stateCd" %in% names(formArgs$values))
 })
 
 # context("NGWMN")
